# gtest_cmake

./: CMakeLists.txt  CMakelists.txt  README  conanfile.txt  my_main.cpp  my_main.h  test_main.cpp
books/: books.proto
jenkins/: Jenkinsfile
math/inc/: add.h  mul.h  sub.h
math/src/: add.cpp  mul.cpp  sub.cpp
socket/inc/: InitSock.h
socket/src/: InitSock.cpp  SecureSocket.cpp  Socket.cpp  TCPClient.cpp  TCPSSLClient.cpp  TCPSSLServer.cpp  TCPServer.cpp
students/inc/: InitStudent.h  sdm.h
students/src/: InitStudent.cpp  admin.cpp  load.cpp  sdm.cpp
test/: testadd.cpp  testmul.cpp  testsub.cpp
